--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+#cardCategory{
+    border:6px solid #FFFAEE;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#cardCategory:hover{
+    border:6px solid black;
+}
+
+/* #mealCard{
+    border:6px solid transparent;
+} */
+
+#mealCard:hover{
+    border:3px solid #FFFAEE;
+}
+
+.cardWithOverlay {
+    position: relative;
+}
+  
+.cardWithOverlay::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1)); 
+  }
+  
+  
+.cardWithOverlay:hover::before {
+    background: linear-gradient(rgba(0, 0, 0, 0)20%,rgba(0, 0, 0, 0.9));
 }
